--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -18,7 +18,7 @@
       <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="/">
           <i class="bi bi-house"></i>
-          Dashboard
+          Users
         </a>
       </li>
       <li class="nav-item">
