--- a/views/customer/add.ejs
+++ b/views/customer/add.ejs
@@ -53,6 +53,6 @@
     </div>
   
     <div class="form-group mb-4">
-      <button type="submit" class="btn btn-primary">Add Customer</button>
+      <button type="submit" class="btn btn-primary" aria-label="AddCustomer">Add Customer</button>
     </div>
   </form>
