--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
     <h1 class="h2">User Dashboard</h1>
     <div class="btn-toolbar mb-2 mb-md 0">
       <div class="btn-group me-2">
-        <a href="/add" class="btn btn-sm btn-outline-secondary">+ New User</a>
+        <a href="/add" class="btn btn-sm btn-outline-secondary" aria-label="AddCustomer">+ New Customer</a>
       </div>
     </div>
   </div>
