--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,10 +7,12 @@
     </div>
   </div>
 
-  <div class="alert alert-success alert-dismissible fade show" role="alert">
-    <%= messages %>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-  </div>
+  <% messages.forEach(element => { %>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      <%= element %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+  <% }) %>
 
   <div class="table-responsive">
 
